# Etripator

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Etripator.files  Etripator.includes  Makefile  Makefile.win  README.md  README.nfo  README.txt  TODO.txt  appveyor.yml  array.h  cd.c  cd.h  cfg.c  cfg.h  comment.c  comment.h  config.h  csv.c  csv.h  decode.c  decode.h  doxyfile.in  etripator.c  etripator.dev  etripator.layout  etripator.sln  etripator.vcxproj  etripator.vcxproj.filters  hashtable.c  hashtable.h  ipl.c  ipl.h  irq.c  irq.h  jsonhelpers.c  (+38 more)
.github/workflows/: build.yml  cmake.yml
cli/: etripator.c  options.c  options.h
cmake/: FindJansson.cmake
comment/: load.c  save.c
examples/: syscard.cfg  syscard_lbl.cfg
examples/games_express/: bank0.json  comments.json  games_express.lbl  labels.json
examples/maerchen_maze/: gfx_unpack.json  labels.cfg  labels.json
examples/monster_puroresu/: README.md  labels.cfg  labels.json  monster.cfg  monster.json
examples/sf2/: joypad.json  labels.json  sf2.lbl
examples/syscard/: bank0.asm  bank0.cfg  bank0.json  labels.cfg  labels.json  syscard.inc
examples/tadaima/: labels.json
examples/taidama/: README.md  labels.cfg  labels.json  mb128.cfg  mb128.json
examples/youkai_douchuuki/: comments.json  labels.json  password.c  password.json
label/: load.c  load.h  loader.c  loader.h  save.c  save.h  writer.c  writer.h
message/: console.c  console.h  file.c  file.h  time.h
platform/windows/: basename.c  basename.h  config_win.h  etripator.vcproj  etripator.vcxproj  etripator.vcxproj.filters  library.c  time.c  time.h  winmmap.c  winmmap.h
section/: load.c  load.h  save.c  save.h
test/: CMakeLists.txt  cd.c  comment.c  decode.c  ipl.c  label.c  memory.c  memory_map.c  message.c  opcodes.c  output.c  rom.c  section.c
test/data/: bank0_0.json  bank0_1.json  comment_0.json  comment_1.json  label_0.json  label_1.json
